:bug: Fix scroll issue on iOS
Thanks to @brandondc741 for iOS fix

:bug: Fix various styling issues

--- a/octoprint_touchui/static/less/touchui.bundled.less
+++ b/octoprint_touchui/static/less/touchui.bundled.less
@@ -3432,6 +3432,7 @@ position: absolute;
 left: -99999px;
 top: -99999px;
 display: block;
+max-width: 100vw;
 &.active {
 position: relative;
 left: auto;
@@ -4274,7 +4275,7 @@ clear: both;
 .scroll-wrapper {
 margin: 0 -@main-gutter 10px;
 height: auto !important;
-overflow: visible;
+overflow: hidden;
 clear: both;
 }
 .text-right.muted {
@@ -4389,10 +4390,9 @@ font-size: 32px;
 .opacity(0.2);
 }
 .btn {
-padding: 10px 15px;
 position: absolute;
 left: 100%;
-top: 14px;
+top: 21px;
 .border-radius(0);
 background: transparent !important;
 z-index: 5;
