--- a/source/less/components/files.less
+++ b/source/less/components/files.less
@@ -96,7 +96,7 @@
 		.scroll-wrapper {
 			margin: 0 -@main-gutter 10px;
 			height: auto !important;
-			overflow: visible;
+			overflow: hidden;
 			clear: both;
 		}
 
@@ -237,10 +237,9 @@
 					}
 
 					.btn {
-						padding: 10px 15px;
 						position: absolute;
 						left: 100%;
-						top: 14px;
+						top: 21px;
 						.border-radius(0);
 						background: transparent !important;
 						z-index: 5;
