--- a/source/less/tabs/temperature.less
+++ b/source/less/tabs/temperature.less
@@ -7,6 +7,7 @@
 	left: -99999px;
 	top: -99999px;
 	display: block;
+	max-width: 100vw;
 
 	&.active {
 		position: relative;
